--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "electron .",
-    "dev":"nodemon --exec electron ."
+    "dev": "nodemon --exec electron ."
   },
   "author": "",
   "license": "ISC",
@@ -13,5 +13,10 @@
     "electron": "^9.0.4",
     "nodemon": "^2.0.4"
   },
-  "dependencies": {}
+  "dependencies": {
+    "imagemin": "^7.0.1",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.0",
+    "slash": "^3.0.0"
+  }
 }
